<resources>
    <string name="app_name">Final Exam</string>

    <string name="pizza_heading">Build a Custom Pizza</string>
    <string name="pizza_name">Name Your Pizza</string>
    <string name="pizza_crust">Choose Crust</string>
    <string name="sauce">Choose Sauce</string>
    <string name="size">Choose Size</string>
    <string name="toppings">Choose Toppings</string>
    <string name="gluten">Gluten-Free</string>

    <string name="order">Order Pizza</string>

    <string-array name="pizza_type">
        <item>Supreme</item>
        <item>Meat lovers</item>
        <item>BBQ Chicken</item>
        <item>Veggie</item>
        <item>Cheese</item>
    </string-array>

    <string-array name="pizza_sauce">
        <item>Red</item>
        <item>White</item>
        <item>BBQ</item>
        <item>Buffalo</item>
    </string-array>

    <string-array name="pizza_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>


    <string name="pepperoni">pepperoni</string>
    <string name="sausage">sausage</string>
    <string name="onions">onions</string>
    <string name="ham">ham</string>
    <string name="bacon">bacon</string>
    <string name="peppers">peppers</string>
    <string name="cheese">extra cheese</string>
    <string name="mushrooms">mushrooms</string>


</resources>
