<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/pizza_heading"
        android:textAlignment="center"
        android:textColor="#060000"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/pizza_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner_pizza"
        android:layout_width="216dp"
        android:layout_height="26dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="29dp"
        android:entries="@array/pizza_sauce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="107dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:entries="@array/pizza_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="57dp"
        android:text="@string/pizza_crust"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_bacon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton_thick"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="thick" />

        <RadioButton
            android:id="@+id/radioButton2_thin"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="thin" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="deep dish" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="23dp"
        android:text="@string/sauce"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinner_pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="82dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:text="@string/size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinner_size"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox_bacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:text="@string/bacon"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_onions"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkBox_ham"
        android:layout_width="66dp"
        android:layout_height="31dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="39dp"
        android:text="@string/ham"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_mushrooms"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_bacon" />

    <CheckBox
        android:id="@+id/checkBox_pepperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="9dp"
        android:text="@string/pepperoni"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_peppers"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_ham" />

    <CheckBox
        android:id="@+id/checkBox_onions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="34dp"
        android:text="@string/onions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_bacon"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkBox_mushrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mushrooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_ham"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_onions" />

    <CheckBox
        android:id="@+id/checkBox_peppers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="41dp"
        android:text="@string/peppers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_pepperoni"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_mushrooms" />

    <CheckBox
        android:id="@+id/checkBox_sausage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="21dp"
        android:text="@string/sausage"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_cheese"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_pepperoni" />

    <CheckBox
        android:id="@+id/checkBox_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="11dp"
        android:text="@string/cheese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_sausage"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_peppers" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="14dp"
        android:text="@string/toppings"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/spinner_pizza" />

    <Switch
        android:id="@+id/switch_glenten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="41dp"
        android:text="@string/gluten"
        app:layout_constraintEnd_toStartOf="@+id/button_order_pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/button_order_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="94dp"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch_glenten_free"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_sausage" />


</android.support.constraint.ConstraintLayout>